# llmtools

./: .gitignore  .gitmodules  =0.37.0  README.md  pyproject.toml  requirements.txt  setup.py
blogpost/css/: paper.css  skylighting-paper-theme.css
debug/: quip_overflow.py  quip_overflow_2.py
docs/: Makefile  index.html  index.md
docs/css/: skylighting-solarized-theme.css  theme.css  tufte.css
docs/features/: index.html
docs/kitchen-sink/: index.html
docs/paper/: index.html
docs/tufte/: index.html
examples/: finetune.py  finetune_ddp.py  finetune_quip.py  finetune_quip_ddp.py  generate-after-lora.py  generate.py  generate_lora.py  generate_quip.py  generate_quip_2.py  generate_quip_lora.py  push_to_hub.py  quantize.py  utils.py
examples/sfdp/: finetune_quip_sfdp.py  finetune_quip_sfdp_hf.py  run_peft_quip_ddp_multigpu.sh  run_peft_quip_fsdp.sh  sfdp_utils.py
experiment/samsum_quip/: data.py  train_samsum_llama_quip.py  utils.py
experiment_samsum/samsum_quip/: eval_samsum_llama_quip.py  eval_samsum_llama_quip_debug.py  llama_lora_samsum.json  train_samsum_llama_quip.py  utils.py
experiment_samsum/slurm/: submit-samsum-train-eval-13b1.sh  submit-samsum-train-eval-7b1.sh
experiment_samsum/slurm_out/: samsum-llama1-7b-2bit-train-eval.e1750633  (+1 more)
llmtools/: config.py  utils.py
llmtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
llmtools/data/: alpaca.py  (+1 more)
llmtune/: config.py  executor.py  run.py  utils.py
quant_cuda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
quip.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+96 files in other folders)
